# Simple_Rag_App

./: .gitignore  README.md  config.py  pyproject.toml
documents/: nlpstudy.md
src/: config.py  constants.py  generation.py  utils.py  🏠_Home.py
src/pages/: ⚙️_Setup.py  🤖_Chatbot.py
