[tool.poetry]
name = "simple-rag-app"
version = "0.1.0"
description = ""
authors = ["taehwan heo <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
streamlit = "^1.32.2"
openai = "^1.16.0"
llama-index = "^0.10.26"
langchain = "^0.1.14"
pypdf = "^4.1.0"
streamlit-chat = "^0.1.1"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
