[tool.poetry]
name = "simple-rag-app"
version = "0.1.0"
description = ""
authors = ["taehwan heo <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
streamlit = "^1.32.2"
openai = "^1.16.0"
llama-index = "^0.10.26"
langchain = "^0.1.14"
pypdf = "^4.1.0"
streamlit-chat = "^0.1.1"
streamlit-option-menu = "^0.3.12"
langchain-community = "^0.0.32"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.3"
langchain-chroma = "^0.1.0"
bs4 = "^0.0.2"
llama-index-vector-stores-chroma = "^0.1.6"
nest-asyncio = "^1.6.0"
nltk = "^3.8.1"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-instructor = "^0.1.3"
llama-index-llms-huggingface = "^0.1.4"
llama-index-llms-openai = "^0.1.15"
llama-index-readers-file = "^0.1.19"
pymupdf = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
